--- a/.github/workflows/build_robotframework_aio.yml
+++ b/.github/workflows/build_robotframework_aio.yml
@@ -144,6 +144,13 @@ jobs:
         set Robot
         "%RobotPythonPath%/python" test/aio-test-trigger/aio-test-trigger.py
 
+    - name: Upload test result as artifact
+      if: success() || failure()
+      uses: actions/upload-artifact@v3
+      with:
+        name: Windows-aiotestlogfiles
+        path: ${{ runner.workspace }}/**/*/aiotestlogfiles/*
+
   install-test-linux:
     name: Test Linux package
     runs-on: ubuntu-latest
@@ -174,6 +181,13 @@ jobs:
         printenv | grep Robot
         echo $(which pandoc)
         $RobotPythonPath/python3.9 test/aio-test-trigger/aio-test-trigger.py
+
+    - name: Upload test result as artifact
+      if: success() || failure()
+      uses: actions/upload-artifact@v3
+      with:
+        name: Linux-aiotestlogfiles
+        path: ${{ runner.workspace }}/**/*/aiotestlogfiles/*
 
   release:
     name: Release AIO
