--- a/.github/workflows/build_robotframework_aio.yml
+++ b/.github/workflows/build_robotframework_aio.yml
@@ -114,6 +114,7 @@ jobs:
     name: Test Windows package
     runs-on: windows-latest
     needs: build-windows
+    if: ${{ ! failure() && ! cancelled() }}
     env:
       RobotPythonPath: "C:/Program Files/RobotFramework/python39"
       RobotTutorialPath: "C:/RobotTest/tutorial"
@@ -159,6 +160,7 @@ jobs:
     name: Test Linux package
     runs-on: ubuntu-latest
     needs: build-linux
+    if: ${{ ! failure() && ! cancelled() }}
 
     steps:
     - name: Checkout source
@@ -197,7 +199,7 @@ jobs:
     name: Release AIO
     runs-on: ubuntu-latest
     needs: [install-test-windows, install-test-linux]
-    if: github.ref_type == 'tag'
+    if: ${{ ! failure() && ! cancelled() && github.ref_type == 'tag' }}
 
     steps:
     - name: Download artifact from build workflow
