add vscode extension jsonp for build pipeline

--- a/config/repositories/repositories.conf
+++ b/config/repositories/repositories.conf
@@ -19,6 +19,7 @@ robotframework-robotlog2db=
 
 testresultwebapp=
 robotframework-documentation=
+vscode-jsonp=
 
 [supported-server]
 github=https://github.com/test-fullautomation
