--- a/.github/workflows/build_robotframework_aio.yml
+++ b/.github/workflows/build_robotframework_aio.yml
@@ -241,3 +241,19 @@ jobs:
         asset_path: ${{ env.DEB_FILE }}
         asset_name: setup_RobotFramework_AIO_Linux_${{ env.RELEASE_VERSION }}.deb
         asset_content_type: application/vnd.debian.binary-package
+
+  tag-to-publish-packges-to-pypi:
+    name: Tag Python packages to trigger workflow for publishing to PyPI
+    runs-on: ubuntu-latest
+    needs: [install-test-windows, install-test-linux]
+    if: ${{ ! failure() && ! cancelled() && github.ref_type == 'tag' }}
+
+    steps:
+    - name: Checkout source
+      uses: actions/checkout@v3
+
+    - name: Install dependencies
+      run: python -m pip install -r ./tools/git-tag/requirements.txt
+
+    - name: Tag repositories
+      run: ./tools/git-tag/tag_repos_with_their_version_file.sh ./tools/git-tag/publish_pypi_repo.txt
