--- a/build
+++ b/build
@@ -252,6 +252,7 @@ function build_debian()
 	# read 2. line, from there return after 10th character
 	VERSION=`sed '2q;d' ./config/build/dpkg_build/control | cut -c 10-`
 	overwrite_testsuitmanagement_version $VERSION
+	VERSION=`sed '2q;d' ./config/build/dpkg_build/control | cut -c 10-`
 	parse_config $ConfigFile
 
 	cd $CURDIR
@@ -319,6 +320,7 @@ function build_windows() {
 
 	VERSION=`sed '2q;d' ./config/build/dpkg_build/control | cut -c 10-`
 	overwrite_testsuitmanagement_version $VERSION
+	VERSION=`sed '2q;d' ./config/build/dpkg_build/control | cut -c 10-`
 
 	parse_config $ConfigFile
 
