--- a/config/repositories/repositories.conf
+++ b/config/repositories/repositories.conf
@@ -3,6 +3,8 @@ python-genpackagedoc=
 python-extensions-collection=
 python-jsonpreprocessor=
 python-pytestlog2db=
+python-microservice-base=
+python-microservice-cleware-switch=
 
 robotframework=
 robotframework-extensions-collection=
