add sudo permission when executing aio-test-trigger

--- a/.github/workflows/build_robotframework_aio.yml
+++ b/.github/workflows/build_robotframework_aio.yml
@@ -196,7 +196,7 @@ jobs:
     - name: Run tests on Linux
       run: |
         . /opt/rfwaio/linux/set_robotenv.sh
-        $RobotPythonPath/python3.9 test/aio-test-trigger/aio-test-trigger.py
+        sudo $RobotPythonPath/python3.9 test/aio-test-trigger/aio-test-trigger.py
 
     - name: Upload test result as artifact
       if: success() || failure()
