Update repository config file for robotframework from branch develop to develop_6.1

--- a/config/repositories/repositories.conf
+++ b/config/repositories/repositories.conf
@@ -16,7 +16,7 @@ robotframework-tutorial=
 robotframework-robotlog2rqm=
 robotframework-robotlog2db=
 robotframework-documentation=
-robotframework=
+robotframework=develop_6.1
 
 testresultwebapp=
 vscode-jsonp=
