Pipeline will be triggered for each new or updated pull requests.

--- a/.github/workflows/build_robotframework_aio.yml
+++ b/.github/workflows/build_robotframework_aio.yml
@@ -8,9 +8,15 @@ on:
   pull_request:
     types:
       - closed
+      - opened
+      - synchronize
     branches: 
       - develop
   workflow_dispatch:
+
+  repository_dispatch:
+    types:
+      - Triggered from another workflow
 
 env:
   GITHUB_PAT : ${{ secrets.PAT_GITHUB }} 
