Update to get console when trigger test.

--- a/.github/workflows/build_robotframework_aio.yml
+++ b/.github/workflows/build_robotframework_aio.yml
@@ -157,7 +157,7 @@ jobs:
       shell: cmd
       run: |
         set Robot
-        "%RobotPythonPath%/python" test/aio-test-trigger/aio-test-trigger.py
+        "%RobotPythonPath%/python" test/aio-test-trigger/aio-test-trigger.py | tee console_log.txt
 
     - name: Upload test result as artifact
       if: success() || failure()
@@ -171,6 +171,7 @@ jobs:
           ${{ runner.workspace }}/[Pp]ython*/**/*/aiotestlogfiles/*
           ${{ runner.workspace }}/[Rr]obotframework*/**/*/testlogfiles/*
           ${{ runner.workspace }}/[Pp]ython*/**/*/testlogfiles/*
+          ${{ runner.workspace }}/**/*/console_log.txt
 
   install-test-linux:
     name: Test Linux package
@@ -200,7 +201,7 @@ jobs:
     - name: Run tests on Linux
       run: |
         . /opt/rfwaio/linux/set_robotenv.sh
-        $RobotPythonPath/python3.9 test/aio-test-trigger/aio-test-trigger.py
+        $RobotPythonPath/python3.9 test/aio-test-trigger/aio-test-trigger.py | tee console_log.txt
 
     - name: Upload test result as artifact
       if: success() || failure()
@@ -210,6 +211,7 @@ jobs:
         path: |
           ${{ runner.workspace }}/**/*/aiotestlogfiles/*
           ${{ runner.workspace }}/**/*/testlogfiles/*
+          ${{ runner.workspace }}/**/*/console_log.txt
 
 
   release:
