--- a/.github/workflows/build_robotframework_aio.yml
+++ b/.github/workflows/build_robotframework_aio.yml
@@ -218,7 +218,7 @@ jobs:
     name: Release AIO
     runs-on: ubuntu-latest
     needs: [install-test-windows, install-test-linux]
-    if: ${{ ! failure() && ! cancelled() && github.ref_type == 'tag' }}
+    if: ${{ ! failure() && ! cancelled() && github.ref_type == 'tag' && startsWith(github.ref, 'refs/tags/rel/aio/') }}
 
     steps:
     - name: Download artifact from build workflow
@@ -265,7 +265,7 @@ jobs:
     name: Tag Python packages to trigger workflow for publishing to PyPI
     runs-on: ubuntu-latest
     needs: [install-test-windows, install-test-linux]
-    if: ${{ ! failure() && ! cancelled() && github.ref_type == 'tag' }}
+    if: ${{ ! failure() && ! cancelled() && github.ref_type == 'tag' && startsWith(github.ref, 'refs/tags/rel/aio/') }}
 
     steps:
     - name: Checkout source
