correct version info for deb file name, enhance pattern to update control file

--- a/build
+++ b/build
@@ -257,7 +257,7 @@ function build_debian()
 	echo -e "${COL_GREEN}#          Executing dpkg to create installer...                                   #${COL_RESET}"
 	echo -e "${COL_GREEN}####################################################################################${COL_RESET}"
 
-	PACK_NAME=RobotFramework_AIO_${VERSION}
+	PACK_NAME=RobotFramework_AIO_${AIO_VERSION}
 
 	#first cleanup
 	rm -rf ./output_lx/${PACK_NAME}/
