--- a/.github/workflows/build_robotframework_aio.yml
+++ b/.github/workflows/build_robotframework_aio.yml
@@ -157,12 +157,7 @@ jobs:
       shell: cmd
       run: |
         set Robot
-        "%RobotPythonPath%/python" test/aio-test-trigger/aio-test-trigger.py 2>&1 | tee console_log.txt
-        # Get system error code from python program
-        exit_code=${PIPESTATUS[0]}
-        if [ $exit_code -eq -1 ]; then
-            exit 1
-        fi
+        "%RobotPythonPath%/python" test/aio-test-trigger/aio-test-trigger.py 2>&1 console_log.txt
 
     - name: Upload test result as artifact
       if: success() || failure()
