--- a/.github/workflows/build_robotframework_aio.yml
+++ b/.github/workflows/build_robotframework_aio.yml
@@ -159,7 +159,7 @@ jobs:
         "$RobotPythonPath/python" test/aio-test-trigger/aio-test-trigger.py 2>&1 | tee console_log.txt
         # Get system error code from python program
         exit_code=${PIPESTATUS[0]}
-        if [ $exit_code -eq 127 ]; then
+        if [ $exit_code -ne 0 ]; then
             exit 1
         fi
 
@@ -208,7 +208,7 @@ jobs:
         $RobotPythonPath/python3.9 test/aio-test-trigger/aio-test-trigger.py 2>&1 | tee console_log.txt
         # Get system error code from python program
         exit_code=${PIPESTATUS[0]}
-        if [ $exit_code -eq 255 ]; then
+        if [ $exit_code -ne 0 ]; then
             exit 1
         fi
 
