--- a/config/robotvscode/data/user-data/User/settings.json
+++ b/config/robotvscode/data/user-data/User/settings.json
@@ -49,7 +49,7 @@
         "*.ipynb": "jupyter-notebook"
     },
     "diffEditor.ignoreTrimWhitespace": false,
-    "terminal.integrated.defaultProfile.windows": "Git Bash",
+    "terminal.integrated.defaultProfile.windows": "PowerShell",
     "editor.suggestSelection": "first",
     "files.exclude": {
         "**/.classpath": true,
