Update default type of terminal on Linux is Git Bash

--- a/config/robotvscode/data/user-data/User/settings.json
+++ b/config/robotvscode/data/user-data/User/settings.json
@@ -50,6 +50,7 @@
     },
     "diffEditor.ignoreTrimWhitespace": false,
     "terminal.integrated.defaultProfile.windows": "PowerShell",
+    "terminal.integrated.defaultProfile.linux": "Git Bash",
     "editor.suggestSelection": "first",
     "files.exclude": {
         "**/.classpath": true,
