--- a/tools/release_info/release_info_config_OSS.json
+++ b/tools/release_info/release_info_config_OSS.json
@@ -21,7 +21,7 @@
 # Format: extended JSON format with the possibility to comment out lines (by '#' at the beginning of the line).
 # The reference for relative paths is the position of this file.
 #
-# Environment variables have to be accessed in this way (Windows and Linux): ${ROBOTPYTHONPATH}
+# Environment variables have to be accessed in this way (Windows and Linux): ${RobotPythonSitePackagesPath}
 #
 # --------------------------------------------------------------------------------------------------------------
 
@@ -30,18 +30,14 @@
 # Section "VERSION_CONFIG":
 # -------------------------
 
-   "VERSION_CONFIG" : "0.1.0 / 20.10.2023 (OSS standard version)",
+   "VERSION_CONFIG" : "0.1.0 / 21.11.2023 (OSS version)",
 
 
 # Section "PACKAGE_CONTEXT_FILE":
 # -------------------------------
 
    # package information provided from build process; content: framework name, version, release date
-
-   # 18.10.2023 / currently support of Windows only, because of:
-   # https://github.com/test-fullautomation/RobotFramework_AIO/issues/165
-
-   "PACKAGE_CONTEXT_FILE" : "${ROBOTPYTHONPATH}/Lib/site-packages/RobotFramework_TestsuitesManagement/Config/package_context.json",
+   "PACKAGE_CONTEXT_FILE" : "${RobotPythonSitePackagesPath}/RobotFramework_TestsuitesManagement/Config/package_context.json",
 
 # Section "RELEASE_MAIN_INFO_FILE":
 # ---------------------------------
@@ -53,15 +49,28 @@
 # Section "RELEASE_ITEM_FILES":
 # -----------------------------
 
-   # Release item files containing all changes made between the current and the previous release; responsible: all developers
+   # Release item files containing all changes made between the current and the previous release; responsible: all developers.
    # Every file contains the complete history of all changes within a certain component. The goal is to inform the readers of the release mail about relevant changes.
    # This is another scope than the history in the documentation of the component. Here the information might be more technical and is related to the version number
    # of the component. The history in the documentation of the component is the history of the component. The history in the release item files is the history of changes
    # of this component between two releases of the RobotFramework AIO. Between these scopes there is not necessarily a full match.
    
    "RELEASE_ITEM_FILES" : [
-                            "./release_items_PythonExtensionsCollection.json",
-                            "./release_items_RobotFrameworkExtensions.json",
-                            "./release_items_JsonPreprocessor.json"
+                            "../../../python-extensions-collection/config/robotframework_aio/release_items_PythonExtensionsCollection.json",
+                            "../../../python-genpackagedoc/config/robotframework_aio/release_items_GenPackageDoc.json",
+                            "../../../python-jsonpreprocessor/config/robotframework_aio/release_items_JsonPreprocessor.json",
+                            "../../../python-pytestlog2db/config/robotframework_aio/release_items_PyTestLog2DB.json",
+                            "../../../robotframework-dbus/config/robotframework_aio/release_items_RobotFramework_DBus.json",
+                            "../../../robotframework-doip/config/robotframework_aio/release_items_RobotFramework_DoIP.json",
+                            "../../../robotframework-extensions-collection/config/robotframework_aio/release_items_RobotframeworkExtensions.json",
+                            "../../../robotframework-qconnect-base/config/robotframework_aio/release_items_QConnectBase.json",
+                            "../../../robotframework-qconnect-winapp/config/robotframework_aio/release_items_QConnectWinapp.json",
+                            "../../../robotframework-robotlog2db/config/robotframework_aio/release_items_RobotLog2DB.json",
+                            "../../../robotframework-robotlog2rqm/config/robotframework_aio/release_items_RobotLog2RQM.json",
+                            "../../../robotframework-testsuitesmanagement/config/robotframework_aio/release_items_RobotFramework_TestsuitesManagement.json",
+                            "../../../robotframework-tutorial/__setup/robotframework_aio/release_items_RobotframeworkTutorial.json",
+                            "../../../testresultwebapp/config/robotframework_aio/release_items_TestResultWebApp.json",
+                            "../../../vscode-jsonp/config/robotframework_aio/release_items_VSCodeJsonp.json"
                           ]
 }
+
