--- a/build
+++ b/build
@@ -253,7 +253,7 @@ function parse_config () {
 }
 
 add_line_to_file() {
-    echo "$1" >> Readme.txt
+    echo "$1" >> version.txt
 }
 
 function generate_version_info() {
@@ -272,7 +272,7 @@ function generate_version_info() {
 	add_line_to_file ""
 	add_line_to_file "Author:"
 	add_line_to_file "********************"
-	add_line_to_file "Thomas Pollerspöck <Pollerspoeck@de.bosch.com>"
+	add_line_to_file "Thomas Pollerspöck <thomas.pollerspoeck@de.bosch.com>"
 }
 
 
@@ -327,7 +327,7 @@ function build_debian()
 	cp ./config/build/dpkg_build/postinst.sh ./output_lx/${PACK_NAME}/usr/local/bin/initRobotFrameworkAIO.sh
 
 	# Update version
-	cp ./Readme.txt ./output_lx/${PACK_NAME}/opt/rfwaio/
+	cp ./version.txt ./output_lx/${PACK_NAME}/opt/rfwaio/
 
 	logresult "$?" "prepared package build" "prepare package build"
 
