Correct config file info.

--- a/.github/workflows/build_robotframework_aio.yml
+++ b/.github/workflows/build_robotframework_aio.yml
@@ -205,7 +205,7 @@ jobs:
     - name: Generate release info
       shell: powershell
       run: |
-        & $env:RobotPythonPath\python .\tools\release_info\release_info.py --configfile ".\example\release_info_config_ReleaseToolTest.json"
+        & $env:RobotPythonPath\python .\tools\release_info\release_info.py --configfile ".\release_info_config_OSS.json"
         mv .\tools\release_info\example\release_info_RobotFramework_AIO_*.html ..\ 
 
          
@@ -266,8 +266,7 @@ jobs:
     - name: Generate release info
       run: |
         . /opt/rfwaio/linux/set_robotenv.sh
-        $RobotPythonPath/python3.9 tools/release_info/release_info.py --configfile ./example/release_info_config_ReleaseToolTest.json
-        ls -la ./tools/release_info
+        $RobotPythonPath/python3.9 tools/release_info/release_info.py --configfile ./release_info_config_OSS.json
         mv ./tools/release_info/example/release_info_RobotFramework_AIO_*.html ../
        
     - name: Upload test result as artifact
@@ -296,7 +295,7 @@ jobs:
       run: |
         echo "EXE_FILE=$(ls windows-package/*.exe | head -1)" >> $GITHUB_ENV
         echo "DEB_FILE=$(ls linux-package/*.deb | head -1)" >> $GITHUB_ENV
-        echo "RELEASE_INFO_FILE=$(ls linux-aiotestlogfiles/*.html | head -1)" >> $GITHUB_ENV
+        echo "RELEASE_INFO_FILE=$(ls windows-aiotestlogfiles/*.html | head -1)" >> $GITHUB_ENV
         echo "RELEASE_VERSION=${TAG_NAME#rel/aio/}" >> $GITHUB_ENV
 
     - name: Create Release
@@ -337,7 +336,7 @@ jobs:
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: ${{ env.RELEASE_INFO_FILE }}
-        asset_name: RELEASE_INFO_FILE
+        asset_name: release_info_RobotFramework_AIO_${{ env.RELEASE_VERSION }}.html
         asset_content_type: text/html
 
   tag-to-publish-packges-to-pypi:
