Added new repository robotframework-doip.

--- a/.github/workflows/build_robotframework_aio.yml
+++ b/.github/workflows/build_robotframework_aio.yml
@@ -203,10 +203,10 @@ jobs:
         fi
 
     - name: Generate release info
-      shell: powershell
+      shell: cmd
       run: |
-        & $env:RobotPythonPath\python .\tools\release_info\release_info.py --configfile ".\release_info_config_OSS.json"
-        mv .\tools\release_info\example\release_info_RobotFramework_AIO_*.html ..\ 
+        "%RobotPythonPath%\python" .\tools\release_info\release_info.py --configfile ".\release_info_config_OSS.json"
+        mv .\tools\release_info\release_info_RobotFramework_AIO_*.html ..\ 
 
          
     - name: Upload test result as artifact
@@ -267,7 +267,7 @@ jobs:
       run: |
         . /opt/rfwaio/linux/set_robotenv.sh
         $RobotPythonPath/python3.9 tools/release_info/release_info.py --configfile ./release_info_config_OSS.json
-        mv ./tools/release_info/example/release_info_RobotFramework_AIO_*.html ../
+        mv ./tools/release_info/release_info_RobotFramework_AIO_*.html ../
        
     - name: Upload test result as artifact
       if: success() || failure()
