Correct robotframework doip configuration.

--- a/config/repositories/repositories.conf
+++ b/config/repositories/repositories.conf
@@ -16,6 +16,7 @@ robotframework-tutorial=
 robotframework-robotlog2rqm=
 robotframework-robotlog2db=
 robotframework-documentation=
+robotframework-doip=
 robotframework=develop_6.1
 
 testresultwebapp=
