Added release info file to the logger storage.

--- a/.github/workflows/build_robotframework_aio.yml
+++ b/.github/workflows/build_robotframework_aio.yml
@@ -207,7 +207,7 @@ jobs:
       shell: cmd
       run: |
         "%RobotPythonPath%\python" .\tools\release_info\release_info.py --configfile ".\release_info_config_OSS.json"
-        mv .\tools\release_info\release_info_RobotFramework_AIO_*.html ..\ 
+        move .\tools\release_info\release_info_RobotFramework_AIO_*.html ..\
 
          
     - name: Upload test result as artifact
