correct component name and update version info

--- a/config/robotframework_aio/release_items_Robotframework_AIO.json
+++ b/config/robotframework_aio/release_items_Robotframework_AIO.json
@@ -16,7 +16,7 @@
 #
 # **************************************************************************************************************
 #
-# ========== Release Items for component 'PyTestLog2DB' ==========
+# ========== Release Items for component 'RobotFramework AIO Package' ==========
 #
 # Basically this component is stand-alone, but can also be used as part of an automation framework called
 # RobotFramework AIO. More information about this framework you can find here:
