--- a/config/robotframework_aio/release_items_Robotframework_AIO.json
+++ b/config/robotframework_aio/release_items_Robotframework_AIO.json
@@ -61,6 +61,7 @@
 
 * Integrate **robotframework-dependencylibrary** library
 * Integrate **robotframework-doip** library
+* Integrate **doipclient** library
 "
                              ]
                  }
