--- a/.github/workflows/build_robotframework_aio.yml
+++ b/.github/workflows/build_robotframework_aio.yml
@@ -393,8 +393,7 @@ jobs:
       run: |
         tag_branch=$(cat tag_branch.txt)
 
-        pr_exists=$(gh pr list --state open | grep -q "Auto-generated pull request" && echo "found" || echo "not found")
-        echo "PR Exists: $pr_exists"
+        pr_exists=$(gh pr list --state open | grep -qw "Auto-generated pull request" && echo "found" || echo "not found")
         if [ "$pr_exists" == "not found" ]; then
           echo "Pull request not found. Creating a new one..."
           gh pr create \
