--- a/.github/workflows/build_robotframework_aio.yml
+++ b/.github/workflows/build_robotframework_aio.yml
@@ -106,6 +106,11 @@ jobs:
           chmod +x ./build
           ./build
 
+      - name: Update all documents
+        run: |
+          cd ../robotframework-documentation
+          git status
+
       - name: Upload built package
         uses: actions/upload-artifact@v3
         with:
