--- a/build
+++ b/build
@@ -331,10 +331,10 @@ function build_debian()
 
 	logresult "$?" "prepared package build" "prepare package build"
 
-	dpkg-deb --root-owner-group --build ./output_lx/${PACK_NAME} ./output_lx/${RobotFrameworkVersion}-0_amd64.deb
+	dpkg-deb --root-owner-group --build ./output_lx/${PACK_NAME} ./output_lx/RobotFramework_AIO_${RobotFrameworkVersion}-0_amd64.deb
 	logresult "$?" "built deb package" "build deb package"
 
-	dpkg -I ./output_lx/${RobotFrameworkVersion}-0_amd64.deb
+	dpkg -I ./output_lx/RobotFramework_AIO_${RobotFrameworkVersion}-0_amd64.deb
 	goodmsg "done."
 }
 
