--- a/.github/workflows/build_robotframework_aio.yml
+++ b/.github/workflows/build_robotframework_aio.yml
@@ -122,7 +122,7 @@ jobs:
           echo -e "\e[32;01mPush all changes completely ... \e[0m"
           
           curl -X POST https://api.github.com/repos/test-fullautomation/robotframework-documentation/dispatches \
-          --header 'authorization: Bearer ${{ secrets.ACTIONS_KEY }}' \
+          --header 'authorization: Bearer ${{ secrets.PAT_THONG }}' \
           -H 'Accept: application/vnd.github.everest-preview+json' \
           --data '{"event_type": "Document", "client_payload": { "repository": "'"$GITHUB_REPOSITORY"'", "branch" : '"$doc_branch"'}}'
           echo -e "\e[32;01m Trigger jobs for pull request ...\e[0m"
